public/personal-website/personal-website/resources/cilium/gateway.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: personal-website
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: cilium
  addresses:
    - type: Hostname
      value: tjzimmerman.com
    - type: Hostname
      value: www.tjzimmerman.com
    - type: Hostname
      value: nix.sol.milkyway
  listeners:
    - name: http-internal
      hostname: nix.sol.milkyway
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: metrics
      hostname: nix.sol.milkyway
      protocol: HTTP
      port: 8080
      allowedRoutes:
        namespaces:
          from: Same
    - name: http
      hostname: tjzimmerman.com
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      hostname: tjzimmerman.com
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: tjzimmerman-com
      allowedRoutes:
        namespaces:
          from: Same
    - name: http-web
      hostname: www.tjzimmerman.com
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-web
      hostname: www.tjzimmerman.com
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: tjzimmerman-com
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: v1
kind: Service
metadata:
  name: cilium-gateway-personal-website
  annotations:
    io.cilium/lb-ipam-ips: 192.168.40.150
spec:
  ports:
    - name: port-80
      port: 80
    - name: port-8080
      port: 80
    - name: port-443
      port: 443
  type: LoadBalancer
